# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md
shader/: basic.frag  basic.vert  sky.frag  sky.vert
src/: lightning.cpp  lightning.h  main.cpp
src/game/: chunk.cpp  chunk.h  game.cpp  game.h  player.cpp  player.h  world.cpp  world.h  world_gen.cpp  world_gen.h
src/input/: input.cpp  input.h
src/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
